--- a/src/App.css
+++ b/src/App.css
@@ -7,18 +7,23 @@
 .forms{
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  height: 80vh;
   margin: 0;
 }
 
-.phonebook{
+
+.main{
   display: flex;
-    flex-direction: column;
-    background-color: #0093E9;
-padding: 10px 20px;
-border-radius: 12px;
-width: 300px;
-margin: 0;
-color: white;
 }
 
+.loader{
+  background-color: #0093E9;
+  
+}
+
+.toaster{
+ width: 100%;
+ height: 80px;
+ font-size: 24px;
+ font-weight: 900;
+}
