--- a/src/App.css
+++ b/src/App.css
@@ -1,29 +1,25 @@
 #root {
   max-width: 1280px;
- 
- 
 }
 
-.forms{
+.forms {
   display: flex;
   flex-direction: column;
   height: 80vh;
   margin: 0;
 }
 
-
-.main{
+.main {
   display: flex;
 }
 
-.loader{
-  background-color: #0093E9;
-  
+.loader {
+  background-color: #0093e9;
 }
 
-.toaster{
- width: 100%;
- height: 80px;
- font-size: 24px;
- font-weight: 900;
+.toaster {
+  width: 100%;
+  height: 80px;
+  font-size: 24px;
+  font-weight: 900;
 }
